--- a/app/style.less
+++ b/app/style.less
@@ -5,3 +5,16 @@ body {
     text-decoration: underline;
   }
 }
+
+
+.LOW_CO2 {
+  color: green;
+}
+
+.MEDIUM_CO2 {
+  color: orange;
+}
+
+.HIGH_CO2 {
+  color: red;
+}
